--- a/index.html
+++ b/index.html
@@ -365,6 +365,12 @@
                         <option value="sv">🇸🇪 Svenska</option>
                     </select>
                 </div>
+                <div class="language-selector" style="margin-left: 10px;">
+                    <select id="endpointSelect" onchange="changeEndpoint()">
+                        <option value="message">🚀 Standard (Production)</option>
+                        <option value="message-graph">🔍 LangGraph (Observability)</option>
+                    </select>
+                </div>
                 <div id="currentState" style="font-weight: 600; color: #667eea;">
                     S1: PowerSource Selection
                 </div>
@@ -416,11 +422,12 @@
     </div>
 
     <script>
-        const API_BASE = 'http://localhost:8000/api/v1/configurator';
+        const API_BASE = 'http://localhost:8001/api/v1/configurator';
         let sessionId = null;
         let selectedProducts = {};
         let responseJson = {};
         let currentLanguage = 'en';  // Default language
+        let currentEndpoint = 'message';  // Default endpoint: 'message' or 'message-graph'
 
         // I18n Translation Dictionary
         const translations = {
@@ -597,6 +604,22 @@
             console.log('Language changed to:', currentLanguage);
         }
 
+        // Change endpoint and show notification
+        function changeEndpoint() {
+            const select = document.getElementById('endpointSelect');
+            currentEndpoint = select.value;
+            sessionStorage.setItem('preferredEndpoint', currentEndpoint);
+
+            // Show endpoint change notification
+            const endpointNames = {
+                'message': 'Standard (Production)',
+                'message-graph': 'LangGraph (Observability)'
+            };
+            const mode = currentEndpoint === 'message' ? '🚀' : '🔍';
+            addMessage(`${mode} Endpoint switched to: ${endpointNames[currentEndpoint]}`, false);
+            console.log('Endpoint changed to:', currentEndpoint);
+        }
+
         function addMessage(text, isUser = false, products = null) {
             const chatContainer = document.getElementById('chatContainer');
             const messageDiv = document.createElement('div');
@@ -629,13 +652,33 @@
             if (products && products.length > 0) {
                 content += `
                     <div class="products-grid">
-                        ${products.map(p => `
-                            <div class="product-card" onclick='selectProduct("${p.gin}", ${JSON.stringify(p).replace(/'/g, "\\'")})'>
-                                <h4>${p.name}</h4>
-                                <p><strong>GIN:</strong> ${p.gin}</p>
-                                <p><strong>Category:</strong> ${p.category}</p>
-                            </div>
-                        `).join('')}
+                        ${products.map((p, index) => {
+                            // Create clean product data without specifications
+                            const cleanProduct = {
+                                gin: p.gin,
+                                name: p.name,
+                                category: p.category,
+                                description: p.description || ''
+                            };
+
+                            // Escape HTML in description to prevent rendering issues
+                            const escapeHtml = (text) => {
+                                const div = document.createElement('div');
+                                div.textContent = text;
+                                return div.innerHTML;
+                            };
+
+                            // Properly escape JSON for HTML attribute using double quotes
+                            const jsonData = JSON.stringify(cleanProduct).replace(/"/g, '&quot;');
+
+                            return `
+                                <div class="product-card" data-product="${jsonData}" onclick="selectProductFromCard(this)">
+                                    <h4>${escapeHtml(p.name)}</h4>
+                                    <p><strong>GIN:</strong> ${escapeHtml(p.gin)}</p>
+                                    <p><strong>Category:</strong> ${escapeHtml(p.category)}</p>
+                                </div>
+                            `;
+                        }).join('')}
                     </div>
                 `;
             }
@@ -721,7 +764,7 @@
             sendBtn.innerHTML = '<div class="loading"></div>';
 
             try {
-                const response = await fetch(`${API_BASE}/message`, {
+                const response = await fetch(`${API_BASE}/${currentEndpoint}`, {
                     method: 'POST',
                     headers: { 'Content-Type': 'application/json' },
                     body: JSON.stringify({
@@ -754,6 +797,26 @@
 
             sendBtn.disabled = false;
             sendBtn.textContent = 'Send';
+        }
+
+        function selectProductByIndex(index) {
+            // Get all product cards
+            const productCards = document.querySelectorAll('.product-card[data-product]');
+            if (index >= 0 && index < productCards.length) {
+                const card = productCards[index];
+                const productData = JSON.parse(card.getAttribute('data-product'));
+                selectProduct(productData.gin, productData);
+            }
+        }
+
+        function selectProductFromCard(element) {
+            // Read product data from the clicked card's data-product attribute
+            try {
+                const productData = JSON.parse(element.getAttribute('data-product'));
+                selectProduct(productData.gin, productData);
+            } catch (error) {
+                console.error('Error parsing product data:', error);
+            }
         }
 
         async function selectProduct(gin, productData) {
@@ -818,6 +881,14 @@
                 // Apply saved language to UI
                 updateUILanguage(savedLanguage);
                 console.log('Loaded saved language preference:', savedLanguage);
+            }
+
+            // Load saved endpoint preference
+            const savedEndpoint = sessionStorage.getItem('preferredEndpoint');
+            if (savedEndpoint) {
+                currentEndpoint = savedEndpoint;
+                document.getElementById('endpointSelect').value = savedEndpoint;
+                console.log('Loaded saved endpoint preference:', savedEndpoint);
             }
         };
     </script>
